# FractalBox

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
include/: App.hpp  CLI.hpp  Camera.hpp  Engine.hpp  Fractal.hpp  Settings.hpp
shaders/: globals.frag  mandelbrot.frag  mandelbulb.de  marcher.frag  pretracer.comp  sierpinskiTri.de  sierpinskiTri.frag  sphere.de  sphere.frag  sphere.frag.old
src/: App.cpp  CLI.cpp  Camera.cpp  Engine.cpp  Fractal.cpp  Main.cpp
